cleaned data, updated notebooks, added src and new fake_news data

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -2,22 +2,414 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20f911dd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 13,
+   "id": "300decd5",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os \n",
+    "import re\n",
+    "DATA_FOLDER = \"../data/fake_news/\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "936c4e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Donald Trump Sends Out Embarrassing New Year’...</td>\n",
+       "      <td>Donald Trump just couldn t wish all Americans ...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Drunk Bragging Trump Staffer Started Russian ...</td>\n",
+       "      <td>House Intelligence Committee Chairman Devin Nu...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0   Donald Trump Sends Out Embarrassing New Year’...   \n",
+       "1   Drunk Bragging Trump Staffer Started Russian ...   \n",
+       "\n",
+       "                                                text subject  \\\n",
+       "0  Donald Trump just couldn t wish all Americans ...    News   \n",
+       "1  House Intelligence Committee Chairman Devin Nu...    News   \n",
+       "\n",
+       "                date label  \n",
+       "0  December 31, 2017  FAKE  \n",
+       "1  December 31, 2017  FAKE  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_df=pd.read_csv(DATA_FOLDER + \"fake.csv\")\n",
+    "true_df=pd.read_csv(DATA_FOLDER + \"true.csv\")\n",
+    "\n",
+    "fake_df['label']='FAKE'\n",
+    "true_df['label']='REAL'\n",
+    "fake_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "05b42274",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>As U.S. budget fight looms, Republicans flip t...</td>\n",
+       "      <td>WASHINGTON (Reuters) - The head of a conservat...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 31, 2017</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>U.S. military to accept transgender recruits o...</td>\n",
+       "      <td>WASHINGTON (Reuters) - Transgender people will...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>December 29, 2017</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  As U.S. budget fight looms, Republicans flip t...   \n",
+       "1  U.S. military to accept transgender recruits o...   \n",
+       "\n",
+       "                                                text       subject  \\\n",
+       "0  WASHINGTON (Reuters) - The head of a conservat...  politicsNews   \n",
+       "1  WASHINGTON (Reuters) - Transgender people will...  politicsNews   \n",
+       "\n",
+       "                 date label  \n",
+       "0  December 31, 2017   REAL  \n",
+       "1  December 29, 2017   REAL  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c9f68c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ben Stein Calls Out 9th Circuit Court: Committ...</td>\n",
+       "      <td>21st Century Wire says Ben Stein, reputable pr...</td>\n",
+       "      <td>US_News</td>\n",
+       "      <td>February 13, 2017</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Trump drops Steve Bannon from National Securit...</td>\n",
+       "      <td>WASHINGTON (Reuters) - U.S. President Donald T...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>April 5, 2017</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Puerto Rico expects U.S. to lift Jones Act shi...</td>\n",
+       "      <td>(Reuters) - Puerto Rico Governor Ricardo Rosse...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>September 27, 2017</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OOPS: Trump Just Accidentally Confirmed He Le...</td>\n",
+       "      <td>On Monday, Donald Trump once again embarrassed...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>May 22, 2017</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Donald Trump heads for Scotland to reopen a go...</td>\n",
+       "      <td>GLASGOW, Scotland (Reuters) - Most U.S. presid...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>June 24, 2016</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Paul Ryan Responds To Dem’s Sit-In On Gun Con...</td>\n",
+       "      <td>On Wednesday, Democrats took a powerful stance...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>June 22, 2016</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AWESOME! DIAMOND AND SILK Rip Into The Press: ...</td>\n",
+       "      <td>President Trump s rally in FL on Saturday was ...</td>\n",
+       "      <td>Government News</td>\n",
+       "      <td>Feb 19, 2017</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>STAND UP AND CHEER! UKIP Party Leader SLAMS Ge...</td>\n",
+       "      <td>He s been Europe s version of the outspoken Te...</td>\n",
+       "      <td>left-news</td>\n",
+       "      <td>Mar 8, 2016</td>\n",
+       "      <td>FAKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>North Korea shows no sign it is serious about ...</td>\n",
+       "      <td>WASHINGTON (Reuters) - The State Department sa...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>December 13, 2017</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Trump signals willingness to raise U.S. minimu...</td>\n",
+       "      <td>(This version of the story corrects the figur...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>May 4, 2016</td>\n",
+       "      <td>REAL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Ben Stein Calls Out 9th Circuit Court: Committ...   \n",
+       "1  Trump drops Steve Bannon from National Securit...   \n",
+       "2  Puerto Rico expects U.S. to lift Jones Act shi...   \n",
+       "3   OOPS: Trump Just Accidentally Confirmed He Le...   \n",
+       "4  Donald Trump heads for Scotland to reopen a go...   \n",
+       "5   Paul Ryan Responds To Dem’s Sit-In On Gun Con...   \n",
+       "6  AWESOME! DIAMOND AND SILK Rip Into The Press: ...   \n",
+       "7  STAND UP AND CHEER! UKIP Party Leader SLAMS Ge...   \n",
+       "8  North Korea shows no sign it is serious about ...   \n",
+       "9  Trump signals willingness to raise U.S. minimu...   \n",
+       "\n",
+       "                                                text          subject  \\\n",
+       "0  21st Century Wire says Ben Stein, reputable pr...          US_News   \n",
+       "1  WASHINGTON (Reuters) - U.S. President Donald T...     politicsNews   \n",
+       "2  (Reuters) - Puerto Rico Governor Ricardo Rosse...     politicsNews   \n",
+       "3  On Monday, Donald Trump once again embarrassed...             News   \n",
+       "4  GLASGOW, Scotland (Reuters) - Most U.S. presid...     politicsNews   \n",
+       "5  On Wednesday, Democrats took a powerful stance...             News   \n",
+       "6  President Trump s rally in FL on Saturday was ...  Government News   \n",
+       "7  He s been Europe s version of the outspoken Te...        left-news   \n",
+       "8  WASHINGTON (Reuters) - The State Department sa...        worldnews   \n",
+       "9   (This version of the story corrects the figur...     politicsNews   \n",
+       "\n",
+       "                  date label  \n",
+       "0    February 13, 2017  FAKE  \n",
+       "1       April 5, 2017   REAL  \n",
+       "2  September 27, 2017   REAL  \n",
+       "3         May 22, 2017  FAKE  \n",
+       "4       June 24, 2016   REAL  \n",
+       "5        June 22, 2016  FAKE  \n",
+       "6         Feb 19, 2017  FAKE  \n",
+       "7          Mar 8, 2016  FAKE  \n",
+       "8   December 13, 2017   REAL  \n",
+       "9         May 4, 2016   REAL  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df = pd.concat([fake_df, true_df]).sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "full_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0ec18853",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:4: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_7172\\3926445538.py:4: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "  text=re.sub(\"http\\S+|@\\S+|[^a-zA-Z0-9\\s]\", \"\", text)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned data saved at: ../data/fake_news/clean_fake_news.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cleaning text\n",
+    "def clean(text):\n",
+    "    text=str(text).lower()\n",
+    "    text=re.sub(\"http\\S+|@\\S+|[^a-zA-Z0-9\\s]\", \"\", text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "full_df['text'] = full_df['text'].apply(clean)\n",
+    "full_df.drop_duplicates(subset=\"text\", inplace=True)\n",
+    "full_df.dropna(subset=[\"text\", \"label\"], inplace=True)\n",
+    "\n",
+    "# Step 5: Save cleaned dataset\n",
+    "clean_file_path = os.path.join(DATA_FOLDER, \"clean_fake_news.csv\")\n",
+    "full_df.to_csv(clean_file_path, index=False)\n",
+    "\n",
+    "\n",
+    "print(\"✅ Cleaned data saved at:\", clean_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27e50d11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
