Updated and implemented RAG to improve accuracy

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "300decd5",
    "metadata": {},
    "outputs": [],
@@ -386,8 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "27e50d11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['FAKE' 'REAL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(DATA_FOLDER + \"clean_fake_news.csv\")\n",
+    "print(df['label'].unique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd759d5",
    "metadata": {},
    "outputs": [],
    "source": []
